force-app/main/default/objects/Event_Role__c/Event_Role__c.object-meta.xml
<CustomObject>
    <label>Event Role</label>
    <nameField>
        <displayFormat>ERID-{0000}</displayFormat>
        <label>Event Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>