force-app/main/default/objects/Event_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Event Organiser</fullName>
            </value>
            <value>
                <fullName>Event staff</fullName>
            </value>
            <value>
                <fullName>External Speaker</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Advancement and Alumni</fullName>
                <isActive>false</isActive>
                <label>Advancement and Alumni</label>
            </value>
            <value>
                <fullName>Careers and Employability</fullName>
                <isActive>false</isActive>
                <label>Careers and Employability</label>
            </value>
            <value>
                <fullName>Catering</fullName>
                <isActive>false</isActive>
                <label>Catering</label>
            </value>
            <value>
                <fullName>Degree Apprenticeships</fullName>
                <isActive>false</isActive>
                <label>Degree Apprenticeships</label>
            </value>
            <value>
                <fullName>Faculty Staff</fullName>
                <isActive>false</isActive>
                <label>Faculty Staff</label>
            </value>
            <value>
                <fullName>Faculty Student Guides</fullName>
                <isActive>false</isActive>
                <label>Faculty Student Guides</label>
            </value>
            <value>
                <fullName>Front of House</fullName>
                <isActive>false</isActive>
                <label>Front of House</label>
            </value>
            <value>
                <fullName>Host</fullName>
                <isActive>false</isActive>
                <label>Host</label>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
                <isActive>false</isActive>
                <label>Marketing &amp; Communications</label>
            </value>
            <value>
                <fullName>Marketing Campaigns Team</fullName>
                <isActive>false</isActive>
                <label>Marketing Campaigns Team</label>
            </value>
            <value>
                <fullName>Media/communications team</fullName>
                <isActive>false</isActive>
                <label>Media/communications team</label>
            </value>
            <value>
                <fullName>Postgraduate Recruitment Team</fullName>
                <isActive>false</isActive>
                <label>Postgraduate Recruitment Team</label>
            </value>
            <value>
                <fullName>Recruitment and Outreach</fullName>
                <isActive>false</isActive>
                <label>Recruitment and Outreach</label>
            </value>
            <value>
                <fullName>Speaker liaison</fullName>
                <isActive>false</isActive>
                <label>Speaker liaison</label>
            </value>
            <value>
                <fullName>Sport and Recreation</fullName>
                <isActive>false</isActive>
                <label>Sport and Recreation</label>
            </value>
            <value>
                <fullName>Student Ambassador</fullName>
                <isActive>false</isActive>
                <label>Student Ambassador</label>
            </value>
            <value>
                <fullName>Student Finance</fullName>
                <isActive>false</isActive>
                <label>Student Finance</label>
            </value>
            <value>
                <fullName>Venue contact</fullName>
                <isActive>false</isActive>
                <label>Venue contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>